# basic-python-project

./: .gitignore  LICENSE  README.md  configs_exp.toml  main.py  pyproject.toml
src/: __init__.py
src/conf/: logger.py
src/enums/: logger.py
src/utils/: configs.py  constants.py  logs.py
