[tool.poetry]
name = "basic-python-project"
version = "0.1.0"
description = "Basic Python project"
authors = ["Thinh Nguyen Phuoc <npthinh1996@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "~3.11"


[tool.poetry.group.dev.dependencies]
black = "~24.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
